; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpio/extr_gpio-cs5535.c_cs5535_gpio_clear.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpio/extr_gpio-cs5535.c_cs5535_gpio_clear.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cs5535_gpio_chip = type { i32 }

@cs5535_gpio_chip = common dso_local global %struct.cs5535_gpio_chip zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cs5535_gpio_clear(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.cs5535_gpio_chip*, align 8
  %6 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  store %struct.cs5535_gpio_chip* @cs5535_gpio_chip, %struct.cs5535_gpio_chip** %5, align 8
  %7 = load %struct.cs5535_gpio_chip*, %struct.cs5535_gpio_chip** %5, align 8
  %8 = getelementptr inbounds %struct.cs5535_gpio_chip, %struct.cs5535_gpio_chip* %7, i32 0, i32 0
  %9 = load i64, i64* %6, align 8
  %10 = call i32 @spin_lock_irqsave(i32* %8, i64 %9)
  %11 = load %struct.cs5535_gpio_chip*, %struct.cs5535_gpio_chip** %5, align 8
  %12 = load i32, i32* %3, align 4
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @__cs5535_gpio_clear(%struct.cs5535_gpio_chip* %11, i32 %12, i32 %13)
  %15 = load %struct.cs5535_gpio_chip*, %struct.cs5535_gpio_chip** %5, align 8
  %16 = getelementptr inbounds %struct.cs5535_gpio_chip, %struct.cs5535_gpio_chip* %15, i32 0, i32 0
  %17 = load i64, i64* %6, align 8
  %18 = call i32 @spin_unlock_irqrestore(i32* %16, i64 %17)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @__cs5535_gpio_clear(%struct.cs5535_gpio_chip*, i32, i32) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
